video overflow fixed

--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -3,7 +3,7 @@
   margin-top: 120px;
   margin-bottom: 217px;
 
-  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
+  @media (min-width: $tablet-width) {
     position: relative;
   }
 
@@ -17,10 +17,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
-    @media (min-width: $desktop-width) {
-      position: relative;
-    }
 
     @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
       flex-direction: column;
@@ -150,9 +146,19 @@
   width: 100%;
 
   @media (min-width: $desktop-width) {
-    bottom: -91px;
-    margin-left: 56px;
-    max-width: 1126px;
+    bottom: -115px;
+    margin-left: -211px;
+  }
+
+  @media (min-width: 1270px) {
+    bottom: -115px;
+    margin-left: -182px;
+  }
+
+  @media (min-width: 1200px) and (max-width: 1269px) {
+    bottom: -115px;
+    margin-left: -141px;
+    max-width: 1036px;
   }
 
   @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
@@ -229,6 +235,10 @@
 .gym__gym-pic {
   background-color: #b6bdcc;
   height: fit-content;
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+  }
 
   @media (max-width: $tablet-width-only) {
     width: 100%;
